<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TalkFish</string>

    <string name="messageNoNewMessagesInChan">Leider sind auf Kanal %d momentan keine neuen Nachrichten verfügbar!</string>
    <string name="messageNewMessagesInConv">Es wurden neue Nachrichten von %s empfangen!</string>

    <string name="btncaptionWelcome">Willkommen und Aktuelles</string>
    <string name="btncaptionChats">Unterhaltungen</string>
    <string name="btncaptionSettings">Einstellungen</string>

    <string name="btncaptionOK">OK</string>
    <string name="btncaptionBack">Zurück</string>
    <string name="btncaptionDelete">Löschen</string>

    <string name="action_settings">Settings</string>
    <string name="action_switch_cam">Kamera wechseln</string>

    <string name="camera_alert">camera alert</string>

    <string name="btncaptionReload">Aktualisieren</string>

    <string name="activityCaptionWelcome">Willkommen</string>
    <string name="logocontent">Logo: TalkFish by enno and friends</string>
    <string name="welcome">Herzlich willkommen $!\n\nDies ist der TalkFish Messenger.
    Ihr Name ist $, dies kann jederzeit in den Einstellungen geändert werden, muss es aber nicht :-) 
    TalkFish achtet in ganz besonderem Maße auf Ihre Privatsphäre. Deshalb wird kein Zugriff auf Ihre Telefonkontakte gefordert.
    Jede Unterhaltung ist von Ihrem Adressbuch unabhängig. TalkFish wird niemals Ihre
    Standortdaten oder jedwede Geräteidentifikation erfassen.
    Auch ganz allgemein folgt TalkFish dem Prinzip der Datensparsamkeit. Ihr eingestellter Name, also $, wird niemals übertragen. Alle Informationen
    werden mit Sinn und Verstand eingesetzt und es wird grundsätzlich vermieden, zuviele Informationen zu verarbeiten. 
    Das Kommunikationsprotokoll ist Metadatenfrei. Kontextinformationen, beispielsweise Datum und Uhrzeit, sind als Teil der Nachricht komplett verschlüsselt.
    Nähere Informationen im Web unter https://de.wikipedia.org/wiki/Die_Gedanken_sind_frei\n 
    \n
    Als Programmsymbol wird internet-group-chat.png des Tango-Projekts verwendet, siehe http://tango.freedesktop.org/Tango_Icon_Library\n
        Als Hintergrundbild für den Chat wird eine Satellitenaufnahme des Mergui Archipels gemäß dieser Bestimmung verwendet:
        By NASA Goddard Space Flight Center (Flickr: Mergui Archipelago) [CC BY 2.0 (http://creativecommons.org/licenses/by/2.0)], via Wikimedia Commons
        Bei einer leeren Chatübersicht wird der Liedtext zu "Die Gedanken sind frei" angezeigt. Dieses Bild ist gemeinfrei und ebenfalls in den Vereinigten Staaten von Amerika
        Public Domain gemäß dieser Bestimmung:
        This work is in the public domain in the United States because it was published (or registered with the U.S. Copyright Office) before January 1, 1923.
    Die komplette App steht unter der GPL v3, der genaue Lizenztext kann hier abgerufen werden: https://www.gnu.org/licenses/gpl.html\n
    \n
        Falls weitere Fragen offen sind, besuchen Sie bitte die Website http://www.talkfish.de oder schreiben Sie mir eine kurze E-Mail an enrico@talkfish.de\n\n
    Viel Spaß mit dem TalkFish Messenger!</string>

    <string name="news">\nNeuigkeiten:\n\n
        Version 0.0.11 vom 05.04.2015:\n Verbesserung der Chatübersicht durch aktive Sortierung nach Zeitpunkt der letzten Nachricht.\n\n
Version 0.0.10 vom 30.12.2015:\n Anhebung des Caches um Faktor 10000 zur Vorbereitung des Foto-Austauschs.\n\n
Version 0.0.9 vom 08.12.2015:\n Begrenzung der Eingabemenge im Chatfenster, optisch ansprechendere Gestaltung des Willkommensbildschirms, Wechsel des App-Icons.\n\n
Version 0.0.8 vom 13.11.2015:\n Schlüsselaustausch über Bluetooth stark beschleunigt und benutzerfreundlicher gestaltet.\n\n
Version 0.0.7 vom 12.11.2015:\n Der Hintergrunddienst zum automatischen Nachrichtenabruf ist nun wesentlich stabiler, so dass keine Nachrichten verpasst werden.\n\n
Version 0.0.6 vom 11.11.2015:\n Die Nachrichten einer Unterhaltung können nun entfernt werden. Dies spart Speicherplatz und beschleunigt die App.
    </string>

    <string name="activityCaptionChats">Unterhaltungen</string>
    <string name="btncaptionChatsAdd">Beginne neue Unterhaltung</string>
    <string name="btncaptionChatsRefresh">Auf Aktualisierungen prüfen</string>
    <string name="btncaptionChatsDetails">Detail</string>
    <string name="btncaptionChatsAddKeys">...</string>
    <string name="btncaptionChatsReceive">#</string>

    <string name="activityCaptionCreateNewConversation">Erstelle neue Unterhaltung</string>
    <string name="textNewConversationName">Kontakt:</string>

    <string name="textConversationName">Unterhaltung:</string>
    <string name="textChannelReceive">Empfangskanal:</string>
    <string name="textChannelSend">Sendekanal:</string>
    <string name="btncaptionKeys">Details</string>
    <string name="activityCaptionKeyinfogroup">Schlüsselübersicht:</string>
    <string name="btncaptionRenameConversation">Ändern</string>
    <string name="btncaptionDeleteMessages">Verlauf\nlöschen</string>
    <string name="btncaptionDeleteConversation">Unterhaltung\nlöschen</string>

    <string name="activityCaptionSettings">Einstellungen</string>
    <string name="textConfigName">Name:</string>
    <string name="btncaptionChannels">Kanäle</string>
    <string name="btncaptionDownloadLatest">Neueste Version herunterladen</string>
    <string name="captionSettingsAlarmOnOff">Aktualisierung im Hintergrund:</string>
    <string name="captionSettingsBackgroundMobile">immer</string>
    <string name="captionSettingsBackgroundWifi">nur im WLAN</string>
    <string name="captionSettingsBackgroundOff">nie</string>

    <string name="activityCaptionChannels">Kanäle</string>
    <string name="btncaptionChannelsOK">Zurück</string>

    <string name="activityCaptionAddKeys">Erzeuge und Übertrage neue Schlüssel</string>
    <string name="activityCaptionKeys">Übersicht</string>
    <string name="btncaptionKeysAddAndSend">Schlüssel\nsenden</string>
    <string name="btncaptionKeysReceive">Schlüssel\nempfangen</string>


    <string name="activityCaptionShowKey">Schlüsseldetails</string>
    <string name="btncaptionSendOverAir">Über Bluetooth senden</string>

    <string name="activityCaptionEditChannel">Kanalparameter</string>
    <string name="textChannelID">ID:</string>
    <string name="textChannelName">Bezeichnung:</string>
    <string name="textChannelProtocol">Protokoll:</string>
    <string name="textChannelEndpoint">URL:</string>

    <string name="activityCaptionChat">Chat</string>
    <string name="inputmessage_hint">Nachricht eingeben</string>

    <string name="activityCaptionSendSingleKeyByBluetooth">Sende 1 Schlüssel per BT</string>
    <string name="activityCaptionReceiveKeyByBluetooth">Empfange Schlüssel per BT</string>

    <string name="activityCaptionSendKeyBatchByBluetooth">Sende Schlüssel per BT</string>

    <string name="select_device">Select Me!</string>
    <string name="none_paired">Bisher ist kein Bluetoothgerät gekoppelt.</string>

    <string name="activityCaptionRename">Umbenennen</string>
    <string name="activityRenameCaptionOldName">Bisherige Bezeichnung:</string>
    <string name="activityRenameCaptionNewName">Neue Bezeichnung:</string>
    <string name="title_activity_capture_photo">CapturePhotoActivity</string>
</resources>
