<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    tools:context="de.kochon.enrico.secrettalkmessenger.activities.MainActivity"
    android:background="@color/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
                
        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
    		android:layout_marginTop="@dimen/vertical_spacer"
            android:contentDescription="@string/logocontent"
            android:src="@drawable/talkfish_alpha" />
                
        <Button
            android:id="@+id/buttonWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:layout_marginTop="@dimen/vertical_spacer"
    		android:layout_marginLeft="@dimen/activity_horizontal_margin"
    		android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/btncaptionWelcome" />

        <Button
            android:id="@+id/buttonChats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:layout_marginLeft="@dimen/activity_horizontal_margin"
    		android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/btncaptionChats" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:layout_marginLeft="@dimen/activity_horizontal_margin"
    		android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/btncaptionSettings" />
                
        <TextView
            android:id="@+id/textViewVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    		android:layout_marginLeft="@dimen/activity_horizontal_margin"
    		android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="" />

            </LinearLayout>
</ScrollView>
