<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    tools:context="de.kochon.enrico.secrettalkmessenger.activities.ShowConversationPropertiesActivity"
    android:background="@color/app_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

                
            <LinearLayout
              android:layout_marginTop="@dimen/vertical_spacer"
              android:layout_marginLeft="@dimen/activity_horizontal_margin"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
                android:background="#9fff87">
            
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:textColor="@color/app_foreground"
                        android:text="@string/textConversationName" />
                    
                        <TextView
                        android:id="@+id/viewConversationName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/app_foreground"
                        android:inputType="text"
                             />
                <Button
                    android:id="@+id/buttonShowConversationPropertiesActivityRenameConversation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btncaptionRenameConversation" />
            </LinearLayout>
        <TextView
            android:id="@+id/viewConversationMessageDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textColor="@color/app_foreground"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_foreground"
            android:layout_marginTop="@dimen/vertical_spacer"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/activityCaptionKeyinfogroup" />
    <LinearLayout
        android:layout_marginTop="@dimen/vertical_spacer"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/viewConversationKeyDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:textColor="@color/app_foreground"
            android:inputType="text"/>
        <Button
            android:id="@+id/buttonShowConversationPropertiesActivityKeys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btncaptionKeys" />
    </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_foreground"
            android:layout_marginTop="@dimen/vertical_spacer"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/activityCaptionKeyexchangegroup" />
    <LinearLayout
        android:layout_marginTop="@dimen/vertical_spacer"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">



        <Button
            android:id="@+id/buttonKeysAddAndSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btncaptionKeysAddAndSend" />

        <Button
            android:id="@+id/buttonKeysReceive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btncaptionKeysReceive" />

    </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/app_foreground"
            android:layout_marginTop="@dimen/vertical_spacer"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/textDeleteGroup" />
    <LinearLayout
        android:layout_marginTop="@dimen/vertical_spacer"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#c12222">


        <Button
            android:id="@+id/buttonShowConversationPropertiesActivityDeleteMessages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btncaptionDeleteMessages" />

        <Button
            android:id="@+id/buttonShowConversationPropertiesActivityDeleteConversation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btncaptionDeleteConversation" />


    </LinearLayout>




    <Button
              android:id="@+id/buttonShowConversationPropertiesActivityBack"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
                android:layout_gravity="right"
              android:layout_marginTop="@dimen/huge_vertical_spacer"
              android:layout_marginLeft="@dimen/activity_horizontal_margin"
              android:layout_marginRight="@dimen/activity_horizontal_margin"
              android:text="@string/btncaptionBack" />
                
   </LinearLayout>
</ScrollView>
